Intermidiate version of the ant-colony.